ChangeLog
---------
Version 5.0-snapshot-2010-mmdd:
- first snapshot release of the CxFreeze packager plugin for eric5